--- a/app/src/main/res/layout/addworkout.xml
+++ b/app/src/main/res/layout/addworkout.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="320dp"
     android:layout_height="290dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="6dp"
     android:layout_gravity="center"
     android:background="@drawable/corner_bg"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    android:padding="6dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_workout_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="6dp"
+        android:layout_marginTop="8dp"
         android:textColorHint="@color/colorAccent"
         android:theme="@style/MyStyle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,9 +34,9 @@
         android:id="@+id/type_spinner"
         android:layout_width="225dp"
         android:layout_height="55dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/qanelas"
         android:hint="@string/workout_type"
-        android:layout_marginStart="8dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -67,10 +66,10 @@
         android:id="@+id/day_spinner"
         android:layout_width="225dp"
         android:layout_height="52dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/qanelas"
         android:hint="@string/weekly_days"
         android:textSize="14sp"
-        android:layout_marginStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
