--- a/app/src/main/res/layout/load.xml
+++ b/app/src/main/res/layout/load.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:gravity="center"
-    >
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_prog"
@@ -13,15 +12,14 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/qanelas"
         android:text="Loading..."
-        android:textColor="@color/colorAccent"
-        />
+        android:textColor="@color/colorAccent" />
+
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/avi"
+        style="@style/AVLoadingIndicatorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/AVLoadingIndicatorView"
         android:visibility="visible"
-        app:indicatorName="BallClipRotatePulseIndicator"
         app:indicatorColor="@color/colorAccent"
-        />
+        app:indicatorName="BallClipRotatePulseIndicator" />
 </LinearLayout>
