--- a/app/src/main/res/layout/musclecard.xml
+++ b/app/src/main/res/layout/musclecard.xml
@@ -4,74 +4,71 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
-    android:background="@color/lightGrey"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
     android:layout_marginEnd="2dp"
-    android:layout_marginStart="2dp">
+    android:layout_marginStart="2dp"
+    android:layout_marginTop="2dp"
+    android:background="@color/lightGrey">
 
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/muscle_photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/profile"
-            app:civ_border_color="#808080"
-            app:civ_border_width="2dp" />
-
-
-        <TextView
-            android:id="@+id/exercise_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="10dp"
-            android:layout_toEndOf="@+id/muscle_photo"
-            android:fontFamily="@font/qanelas"
-            android:singleLine="true"
-            android:textSize="24sp"
-            tools:text="Exercise Name" />
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/muscle_photo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/profile"
+        app:civ_border_color="#808080"
+        app:civ_border_width="2dp" />
 
 
-
-        <TextView
-            android:id="@+id/mechanic_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/exercise_name"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@+id/muscle_photo"
-            android:fontFamily="@font/qanelas"
-            android:textSize="17sp"
-            tools:text="Mechanism" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/exercise_name"
-            android:layout_marginTop="11dp"
-            android:dropDownWidth="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
-            android:layout_toEndOf="@+id/mechanic_name">
-
-        </Spinner>
-
-        <ImageView
-            android:id="@+id/add_exercise"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="5dp"
-            android:elevation="4dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_add_circle_outline_black_24dp"/>
+    <TextView
+        android:id="@+id/exercise_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/muscle_photo"
+        android:fontFamily="@font/qanelas"
+        android:singleLine="true"
+        android:textSize="24sp"
+        tools:text="Exercise Name" />
 
 
+    <TextView
+        android:id="@+id/mechanic_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/exercise_name"
+        android:layout_marginTop="16dp"
+        android:layout_toEndOf="@+id/muscle_photo"
+        android:fontFamily="@font/qanelas"
+        android:textSize="17sp"
+        tools:text="Mechanism" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/exercise_name"
+        android:layout_marginTop="11dp"
+        android:layout_toEndOf="@+id/mechanic_name"
+        android:backgroundTint="@color/colorPrimary"
+        android:dropDownWidth="wrap_content">
+
+    </Spinner>
+
+    <ImageView
+        android:id="@+id/add_exercise"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="5dp"
+        android:elevation="4dp"
+        android:src="@drawable/ic_add_circle_outline_black_24dp" />
 
 
 </RelativeLayout>
