--- a/app/src/main/res/layout/programcard.xml
+++ b/app/src/main/res/layout/programcard.xml
@@ -6,11 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    >
+    android:orientation="vertical">
 
 
     <RelativeLayout
