--- a/app/src/main/res/layout/fragment_muscle_b.xml
+++ b/app/src/main/res/layout/fragment_muscle_b.xml
@@ -10,6 +10,7 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="4dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
