--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="tinted">#50c16f5d</color>
     <color name="mainLight">#f8bbad</color>
     <color name="lightGrey">#4E5159</color>
+    <color name="colorPrimaryRipple">#F16343</color>
 
 
 </resources>
