--- a/app/src/main/res/layout/addworkout.xml
+++ b/app/src/main/res/layout/addworkout.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="320dp"
-    android:layout_height="290dp"
+    android:layout_height="300dp"
     android:layout_gravity="center"
     android:background="@drawable/corner_bg"
     android:elevation="4dp"
@@ -85,7 +85,7 @@
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/qanelas"
-        android:text="@string/done"
+        android:text="@string/next"
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
