--- a/app/src/main/res/layout/programcard.xml
+++ b/app/src/main/res/layout/programcard.xml
@@ -71,7 +71,7 @@
 
         <TextView
             android:id="@+id/workout_name"
-            android:layout_width="wrap_content"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
@@ -116,7 +116,7 @@
             tools:text="4 Days" />
 
         <ImageButton
-
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
