--- a/app/src/main/res/layout/fragment_muscle_b.xml
+++ b/app/src/main/res/layout/fragment_muscle_b.xml
@@ -22,7 +22,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_collapseMode="parallax">
 
@@ -34,7 +34,7 @@
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
                     tools:ignore="UnusedAttribute"
-                    tools:src="@drawable/abs_t"
+                    tools:src="@drawable/tricep_t"
                     tools:transitionName="@string/chest_trans" />
             </LinearLayout>
 
